--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>User Login - Surge Ryder's</title>
+    <title>Admin Login - Surge Ryder's</title>
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/font-awesome.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -19,16 +19,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" id="brand" href="#">Surge Ryder's</a>
+                <a class="navbar-brand" id="brand" href="#">Surge Ryder's<sup>&reg</sup></a>
             </div>
             
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="../admin/index.html">Admin Login</a></li>
+                    <li  class="active"><a href="../admin/index.html">Admin Login</a></li>
                     <li><a href="../driver/index.html">Driver Login</a></li>
-                    <li class="active"><a href="index.html">Sign In</a></li>
-                    <li><a href="reg.html">Sign Up</a></li>
+                    <li><a href="../users/index.html">User Login</a></li>
                 </ul>
             </div>
         </nav>
@@ -36,10 +35,9 @@
         <form action="" method="post" enctype="multipart/form-data">
             <div class="row">
                 <div id="header">
-                    <label id="label">Users's Login</label>
+                    <label id="label">Admin Login</label>
                 </div>
             </div>
-
             <div class="row">
                 <div id="avatar" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 mr-auto ml-auto">
                     <label id="image-o">
@@ -49,7 +47,7 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" id="myLabel">
+                <div class="col-sx-2 col-sm-2 col-md-2 col-lg-2">
                     <label for="fname">Userame</label>
                 </div>
 
@@ -59,7 +57,7 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" id="myLabel">
+                <div class="col-sx-2 col-sm-2 col-md-2 col-lg-2">
                     <label for="fname">Password</label>
                 </div>
 
@@ -70,11 +68,11 @@
 
             <div class="row">
                 <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
-                    <a href="dashboard.html" id="btnLogin"><input type="button" value="Login" id="myButton" class="form-control"></a>
+                    <a href="dashboard.html"><input type="button" value="Login" id="myButton" class="form-control"></a>
                 </div>
             </div>
         </form>
-
+        
         <div class="row" id="footer">
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <label id="footer-header">Quick Links</label>
@@ -108,11 +106,9 @@
 
 
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                <label id="footer-title">&copy 2021 Surge Ryder's<sup>&reg</sup></label>
+                <label id="footer-title">&copy 2021 . Surge Ryder's</label>
             </div>
         </div>
-
     </div>
-
 </body>
 </html>
